# chess_engine

./: .README.md.swp  .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  github.pub  main.cpp
magic-bits/: README.md
magic-bits/src/: magic_bits  slider_attacks.cpp  slider_attacks.h  slider_attacks_test
src/: LookupTables.cpp  benchmarks.cpp  bitboard.cpp  evaluate.cpp  evaluate.h  exitTimer.cpp  lookupTables.cpp  main.cpp  position.cpp  search.cpp  tests.cpp  thread.cpp  threadManager.cpp  threads.cpp  transpositionTable.cpp  uci.cpp
src/include/: LookupTables.h  benchmarks.h  bitboard.h  definitions.h  dictionaries.h  evaluate.h  exitTimer.h  lookupTables.h  moveGenHelpFunctions.h  position.h  search.h  tests.h  thread.h  threadManager.h  threads.h  transpositionTable.h  types.h  uci.h  useful.h  zobristTables.h
